gccida/c3/combine_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2281:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2306:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class min_class; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2308:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v52; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2312:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v56; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2313:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v57; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2346:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( unsigned int)v10[1]; 
                     ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2350:38: error: use of undeclared identifier 'machine_mode'
v9 += subreg_regno_offset( rtuint, ( machine_mode)BYTE2( v12), v14, ( machine_mode)BYTE2( v11)); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2350:71: error: use of undeclared identifier 'machine_mode'
v9 += subreg_regno_offset( rtuint, ( machine_mode)BYTE2( v12), v14, ( machine_mode)BYTE2( v11)); 
                                                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2367:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( unsigned int)( ( unsigned int)( mode_class_0[( unsigned __int8)v16] - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2397:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = ( unsigned int)v19[1]; 
                     ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2407:35: error: use of undeclared identifier 'machine_mode'
v27 = subreg_regno_offset( v22, ( machine_mode)BYTE2( v21), v23, v24); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2425:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = ( ( unsigned int)( mode_class_0[BYTE2( v20)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2457:57: error: use of undeclared identifier 'qty_0'
&& ( ( int)v15 < 53 || v30 <= ( int)v17 || ( int)v17 >= qty_0[*( ( int *)reg_qty + v15)].size) ) 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2541:13: error: use of undeclared identifier 'qty_0'
min_class = qty_0[v47[v15]].min_class; 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2549:7: error: use of undeclared identifier 'qty_0'
v54 = qty_0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2551:40: error: use of undeclared identifier 'qty_0'
*( ( _DWORD *)reg_next_in_qty + v70) = qty_0[v53].first_reg; 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2554:31: error: use of undeclared identifier 'qty_0'
if ( reg_class_subset_p( v56, qty_0[v55].min_class) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2555:1: error: use of undeclared identifier 'qty_0'
qty_0[v55].min_class = v56; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/local-alloc.c:2557:31: error: use of undeclared identifier 'qty_0'
if ( reg_class_subset_p( v57, qty_0[v55].alternate_class) ) 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_regs/src/obj/local-alloc.o] Error 1
